--- a/install
+++ b/install
@@ -14,14 +14,18 @@ LIST_FILE = os.path.join(DOTFILES_DIR, 'list.json')
 def install_dotfiles():
     dotfiles = load_dotfiles_list()
 
+    count = 0
     for dirname, _, files in os.walk(DOTFILES_DIR):
         for filename in files:
-            if not is_dotfile(filename):
+            filepath = os.path.join(dirname, filename)
+            if not is_dotfile(filepath):
                 continue
 
-            filepath = os.path.join(dirname, filename)
             install_dotfile(filepath,
                             config=find_dotfile_in_list(dotfiles, filepath))
+            count += 1
+
+    print "Installed %d dotfile(s)." % count
 
 
 def install_dotfile(filepath, config=None):
@@ -38,18 +42,21 @@ def install_dotfile(filepath, config=None):
     # (re)create the link
     if os.path.exists(dest_dotfile):
         os.unlink(dest_dotfile)
-    link_func = os.link if config.get('hard') else os.symlink
+    link_func = os.link if config.get('hardlink') else os.symlink
     link_func(src_dotfile, dest_dotfile)
 
 
 # Utility functions
 
-def is_dotfile(filename):
+def is_dotfile(filepath):
+    filepath = os.path.relpath(filepath, start=DOTFILES_DIR)
+    filepath = os.path.normpath(filepath)
+
     # TODO: use .gitignore to determine which dotfiles are interesting
     return all([
-        filename.startswith('.'),
-        not filename.startswith('.git'),  # exclude VCS files
-        not filename.endswith('~'),  # exclude backup/temp files
+        filepath.startswith('.'),
+        not filepath.startswith('.git'),  # exclude VCS files
+        not filepath.endswith('~'),  # exclude backup/temp files
     ])
 
 
